tests/type/errors/bad_array1.xi
foo() {
    x:int[] = 1
}